[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-health-guardian"
version = "0.1.0"
description = "🛡️ Skills Environment Health Guardian — AI Agent Skills 运行环境监控与管理平台"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "tomansen", email = "tomansen@163.com"}
]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
]
keywords = ["ai-agents", "mcp", "skills", "health-monitoring", "devops", "agent-ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
shg-check = "scripts.cli:main"
shg-fix = "scripts.fixer:main"

[project.urls]
Homepage = "https://github.com/tomansen/skills-health-guardian"
Repository = "https://github.com/tomansen/skills-health-guardian"
Issues = "https://github.com/tomansen/skills-health-guardian/issues"
Documentation = "https://github.com/tomansen/skills-health-guardian/blob/main/README.zh-CN.md"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.setuptools.package-data]
scripts = ["*.sh"]
